[gd_scene load_steps=12 format=3 uid="uid://4yhleww3p64q"]

[ext_resource type="Theme" uid="uid://bseq8ct27g434" path="res://Themes/panel_background.tres" id="1_jw05a"]
[ext_resource type="Script" uid="uid://chexiumk6sk5v" path="res://Scripts/criminal_records_app.gd" id="2_lsltf"]
[ext_resource type="Theme" uid="uid://hy6j8q5qcw0v" path="res://Themes/top_bar.tres" id="2_sqg14"]
[ext_resource type="Texture2D" uid="uid://cwdhu5ktimnnt" path="res://Icons/icons8-close-24.png" id="3_jw05a"]
[ext_resource type="Theme" uid="uid://d4de1kekhdg4m" path="res://Themes/criminal_records_app.tres" id="4_sqg14"]
[ext_resource type="Theme" uid="uid://c8eulcvg7i8il" path="res://Themes/backoptions.tres" id="6_40b82"]
[ext_resource type="Texture2D" uid="uid://c4k0xagf6tuuy" path="res://Icons/icons8-back-24.png" id="6_en5tu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40b82"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_rhsmg"]
Panel/styles/panel = SubResource("StyleBoxFlat_40b82")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jw05a"]
bg_color = Color(0.85882354, 0.80784315, 0.8627451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.7058824, 0.62352943, 0.7176471, 1)

[sub_resource type="Theme" id="Theme_sqg14"]
Panel/styles/panel = SubResource("StyleBoxFlat_jw05a")

[node name="CriminalRecordsApp" type="Panel" groups=["CriminalRecordsApp"]]
anchors_preset = -1
anchor_left = 0.731
anchor_top = 0.083000004
anchor_right = 0.97700006
anchor_bottom = 0.66800004
offset_left = -0.11199951
offset_top = 0.21599579
offset_right = -0.5040283
offset_bottom = 0.13598633
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jw05a")
script = ExtResource("2_lsltf")

[node name="PanelBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.99300003
offset_top = -1.0
offset_right = -2.0
offset_bottom = 0.099975586
theme = SubResource("Theme_rhsmg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_right = 0.99500006
anchor_bottom = 0.089
offset_left = -0.023000002
offset_right = -0.585022
offset_bottom = 0.269001
theme = ExtResource("2_sqg14")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.21900001
anchor_right = 0.34600002
anchor_bottom = 0.804
offset_left = 12.0
offset_top = 0.4859972
offset_right = -104.85009
offset_bottom = -0.49900818
grow_vertical = 2
theme = ExtResource("2_sqg14")
theme_override_font_sizes/font_size = 16
text = "Criminal Records Database"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.48700002
anchor_right = 1.0
anchor_bottom = 0.48700002
offset_left = -27.294983
offset_top = -11.967009
offset_right = -10.294983
offset_bottom = 13.0329895
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
icon = ExtResource("3_jw05a")
autowrap_trim_flags = 192
expand_icon = true

[node name="MinimizeButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.294983
offset_top = -30.500008
offset_right = -26.294983
offset_bottom = 11.499992
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_sqg14")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "_"
autowrap_trim_flags = 192
expand_icon = true

[node name="AppBody" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.089
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 0.21199799
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_sqg14")

[node name="SearchContainer" type="VBoxContainer" parent="AppBody"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16700001
anchor_right = 0.83000004
anchor_bottom = 1.0
offset_left = -0.1760025
offset_right = -0.24002075
offset_bottom = -1.0
alignment = 1

[node name="FirstNameLabel" type="Label" parent="AppBody/SearchContainer"]
layout_mode = 2
theme = ExtResource("4_sqg14")
text = "First Name"

[node name="FirstNameField" type="LineEdit" parent="AppBody/SearchContainer"]
layout_mode = 2
theme = ExtResource("4_sqg14")
caret_blink = true

[node name="LastNameLabel" type="Label" parent="AppBody/SearchContainer"]
layout_mode = 2
theme = ExtResource("4_sqg14")
text = "Last Name"

[node name="LastNameField" type="LineEdit" parent="AppBody/SearchContainer"]
layout_mode = 2
theme = ExtResource("4_sqg14")

[node name="SubmitButton" type="Button" parent="AppBody/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_sqg14")
text = "Submit"

[node name="ScrollContainer" type="ScrollContainer" parent="AppBody"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ResultsContainer" type="VBoxContainer" parent="AppBody/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackContainer" type="Panel" parent="AppBody/ScrollContainer/ResultsContainer" groups=["BackOption"]]
custom_minimum_size = Vector2(0, 33.705)
layout_mode = 2
theme = ExtResource("6_40b82")

[node name="Button" type="Button" parent="AppBody/ScrollContainer/ResultsContainer/BackContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -12.5
offset_right = 167.0
offset_bottom = 11.5
grow_vertical = 2
theme = ExtResource("6_40b82")
text = "Back to search"
icon = ExtResource("6_en5tu")

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="AppBody/SearchContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="AppBody/ScrollContainer/ResultsContainer/BackContainer/Button" to="." method="_on_button_pressed"]
